--- a/src/main/frontend/src/app/navbar/navbar.component.html
+++ b/src/main/frontend/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar>
-  <a [routerLink]="['']" class="navbar-brand">SKLEP OBUWNICZY</a>
+<mat-toolbar class="navbar-shoeshop">
+  <a [routerLink]="['']" class="navbar-brand">M&K SHOES</a>
   <ul class="navbar-menu">
     <li>
       <a [routerLink]="['']" (click)="searchByGender('MEN')">Męskie</a>
