--- a/src/main/frontend/src/app/shoes-list/shoes/shoes.component.scss
+++ b/src/main/frontend/src/app/shoes-list/shoes/shoes.component.scss
@@ -1,3 +1,5 @@
+@import "../../../styles.scss";
+
 .shoes-card {
   width: 23.3%;
   position: relative;
@@ -9,7 +11,7 @@
   h4 {
     margin-bottom: 15px;
     .badge-price {
-      background-color: #33a94e;
+      background-color: $button-color;
       position: absolute;
       bottom: 10px;
       right: 15px;
