--- a/src/main/frontend/src/app/shoes-detail/shoes-detail.component.scss
+++ b/src/main/frontend/src/app/shoes-detail/shoes-detail.component.scss
@@ -12,13 +12,25 @@
   .shoes-information {
     width: 350px;
     vertical-align: top;
+    display: inline-block;
     h2 {
       text-align: center;
       span {
         background-color: $button-color;
       }
     }
-    display: inline-block;
+    .rating {
+      width: 220px;
+      margin: 0 auto;
+      .rate {
+        font-size: 1.3rem;
+      }
+      span {
+        display: inline-block;
+        padding: 0 10px;
+        font-size: 1.1rem;
+      }
+    }
     .color-variants {
       width: 50px;
       height: 50px;
@@ -59,6 +71,20 @@
     }
     .mat-divider {
       position: relative;
+    }
+  }
+  .vote {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    font-size: 1.2rem;
+    .useful {
+      color: green;
+      cursor: pointer;
+    }
+    .unuseful {
+      color: red;
+      cursor: pointer;
     }
   }
 }
