--- a/src/main/frontend/src/app/shoes-detail/shoes-detail.component.html
+++ b/src/main/frontend/src/app/shoes-detail/shoes-detail.component.html
@@ -56,12 +56,12 @@
 
   <mat-card class="mt-3">
     <mat-card-content>
-      <mat-card class="mt-2" *ngFor="let comment of shoeRate.comments">
+      <mat-card class="mt-2" *ngFor="let comment of shoeRate.comments; trackBy:trackByFn">
         <mat-card-content>
           <ngb-rating [rate]="comment.rate"></ngb-rating>
           <div class="vote">
-              <i class="fa fa-thumbs-up useful" (click)="vote(comment.id, true)"></i>
-              <i class="fa fa-thumbs-down unuseful" (click)="vote(comment.id, false)"></i>
+              <i class="fa fa-thumbs-up useful" (click)="vote(comment.rateId, true)"></i>
+              <i class="fa fa-thumbs-down unuseful" (click)="vote(comment.rateId, false)"></i>
               <span [ngClass]="comment.usability >= 0 ? 'useful' : 'unuseful'">{{comment.usability}}</span>
           </div>
           <div class="mt-2">{{comment.rateComment}}</div>
